--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,18 @@
 {
-  "name": "QR Scanner PWA",
+  "name": "QR Scanner",
   "short_name": "QR Scanner",
-  "start_url": ".",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#f6f6f6",
+  "background_color": "#ffffff",
   "theme_color": "#0275d8",
-  "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/565/565547.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/565/565547.png",
       "sizes": "512x512",
       "type": "image/png"
     }
